--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ if(APPLE)
 endif()
 
 add_executable(quickViewer src/main.cpp src/definitions.h src/utils.h src/bmp.h src/recording.h src/vectors.h src/filereader.h src/videorecorder.h)
-target_link_libraries(quickViewer imgui_glfw_gl2 fmt lodepng)
+target_link_libraries(quickViewer imgui_glfw_gl2 fmt lodepng Eigen)
 if(CMAKE_COMPILER_IS_GNUCXX)
     # Hotfix so that is shows up in the file explorer as executable, see https://stackoverflow.com/questions/41398444/
     target_link_options(quickViewer PRIVATE "-no-pie")
