Add tcp server for IPC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,8 +60,8 @@ if (APPLE)
     add_definitions(-DGL_SILENCE_DEPRECATION)
 endif ()
 
-add_executable(quickVidViewer src/main.cpp src/definitions.h src/utils.h src/bmp.h src/recording.h src/vectors.h src/filereader.h src/videorecorder.h src/recordingwindow.h src/transformations.h src/main_window.h)
-target_link_libraries(quickVidViewer CLI11::CLI11 imgui_glfw_gl2 fmt lodepng Eigen ipol asio)
+add_executable(quickVidViewer src/main.cpp src/definitions.h src/utils.h src/bmp.h src/recording.h src/vectors.h src/filereader.h src/videorecorder.h src/recordingwindow.h src/transformations.h src/main_window.h src/globals.cpp src/globals.h src/ipc.h src/globals.cpp src/globals.h src/ipc.cpp)
+target_link_libraries(quickVidViewer CLI11::CLI11 imgui_glfw_gl2 fmt lodepng Eigen ipol asio readerwriterqueue flatbuffers)
 if (CMAKE_COMPILER_IS_GNUCXX)
     if (STATIC_GCC)
         target_link_libraries(quickVidViewer -static-libgcc -static-libstdc++)
