--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ Release
 
 imgui.ini
 *.dat
+*.npy
 
 # Created by https://www.gitignore.io/api/python
 # Edit at https://www.gitignore.io/?templates=python
