--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,7 +66,7 @@ if (APPLE)
 endif ()
 
 add_executable(quickVidViewer src/main.cpp src/utils.h src/bmp.h src/recording.h src/vectors.h src/filereader.h src/videorecorder.h src/recordingwindow.h src/transformations.h src/main_window.h src/globals.cpp src/globals.h src/ipc.h src/globals.cpp src/globals.h src/ipc.cpp src/recordingwindow.cpp src/utils.cpp src/transformations.cpp src/filereader_formats.h src/recording.cpp src/ui.h src/colormap.cpp src/colormap.h src/iterators.h src/recordingwindow_helpers.cpp src/recordingwindow_helpers.h)
-target_link_libraries(quickVidViewer CLI11::CLI11 imgui_glfw_gl3 fmt lodepng Eigen ipol asio readerwriterqueue flatbuffers ghc_filesystem mio libnpy pugixml)
+target_link_libraries(quickVidViewer CLI11::CLI11 imgui_glfw_gl3 fmt lodepng Eigen ipol asio readerwriterqueue flatbuffers ghc_filesystem mio libnpy pugixml flagset)
 if (QVV_FORCE_TCP_IPC)
     target_compile_definitions(quickVidViewer PRIVATE "-DQVV_FORCE_TCP_IPC")
 endif ()
