--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ endif ()
 set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
 set(THREADS_PREFER_PTHREAD_FLAG TRUE)
 
+list(INSERT CMAKE_MODULE_PATH 0 ${PROJECT_SOURCE_DIR}/vendor/cmake)
+include(CMakeRC)
+
 include(GNUInstallDirs)
 
 if (CMAKE_COMPILER_IS_GNUCXX AND STATIC_GCC)
@@ -65,14 +68,19 @@ if (APPLE)
     add_definitions(-D_LIBCPP_DISABLE_AVAILABILITY)
 endif ()
 
+file(GLOB SHADERS "src/shaders/*.glsl")
+cmrc_add_resource_library(quickVidViewer-resources ALIAS qvv::rc NAMESPACE rc ${SHADERS})
+
 add_executable(quickVidViewer src/main.cpp src/utils.h src/bmp.h src/recording.h src/vectors.h src/filereader.h src/videorecorder.h src/recordingwindow.h src/transformations.h src/main_window.h src/globals.cpp src/globals.h src/ipc.h src/globals.cpp src/globals.h src/ipc.cpp src/recordingwindow.cpp src/utils.cpp src/transformations.cpp src/filereader_formats.h src/recording.cpp src/ui.h src/colormap.cpp src/colormap.h src/iterators.h src/recordingwindow_helpers.cpp src/recordingwindow_helpers.h)
-target_link_libraries(quickVidViewer CLI11::CLI11 imgui_glfw_gl3 fmt lodepng Eigen ipol asio readerwriterqueue flatbuffers ghc_filesystem mio libnpy pugixml flagset)
+target_link_libraries(quickVidViewer PRIVATE
+        CLI11::CLI11 imgui_glfw_gl3 fmt lodepng Eigen ipol asio readerwriterqueue flatbuffers ghc_filesystem mio libnpy
+        pugixml flagset qvv::rc)
 if (QVV_FORCE_TCP_IPC)
     target_compile_definitions(quickVidViewer PRIVATE "-DQVV_FORCE_TCP_IPC")
 endif ()
 if (CMAKE_COMPILER_IS_GNUCXX)
     if (STATIC_GCC)
-        target_link_libraries(quickVidViewer -static-libgcc -static-libstdc++)
+        target_link_libraries(quickVidViewer PRIVATE -static-libgcc -static-libstdc++)
     else ()
         # Hotfix so that is shows up in the file explorer as executable, see https://stackoverflow.com/questions/41398444/
         target_link_options(quickVidViewer PRIVATE "-no-pie")
