--- a/.gitlab/Makefile
+++ b/.gitlab/Makefile
@@ -1,12 +1,12 @@
 build:
-	docker build --pull -t docker.gitlab.gwdg.de/jlebert/quickmultrecviewer:latest .
-	docker build -t docker.gitlab.gwdg.de/jlebert/quickmultrecviewer/gcc:latest -f Dockerfile.gcc .
-	docker build -t docker.gitlab.gwdg.de/jlebert/quickmultrecviewer/clang:latest -f Dockerfile.clang .
+	docker build --pull -t docker.gitlab.gwdg.de/lebert/monochrome:latest .
+	docker build -t docker.gitlab.gwdg.de/lebert/monochrome/gcc:latest -f Dockerfile.gcc .
+	docker build -t docker.gitlab.gwdg.de/lebert/monochrome/clang:latest -f Dockerfile.clang .
 
 push:
-	docker push docker.gitlab.gwdg.de/jlebert/quickmultrecviewer
-	docker push docker.gitlab.gwdg.de/jlebert/quickmultrecviewer/gcc
-	docker push docker.gitlab.gwdg.de/jlebert/quickmultrecviewer/clang
+	docker push docker.gitlab.gwdg.de/lebert/monochrome
+	docker push docker.gitlab.gwdg.de/lebert/monochrome/gcc
+	docker push docker.gitlab.gwdg.de/lebert/monochrome/clang
 
 clean:
-	docker rmi docker.gitlab.gwdg.de/jlebert/quickmultrecviewer/gcc docker.gitlab.gwdg.de/jlebert/quickmultrecviewer/clang docker.gitlab.gwdg.de/jlebert/quickmultrecviewer
+	docker rmi docker.gitlab.gwdg.de/lebert/monochrome/gcc docker.gitlab.gwdg.de/lebert/monochrome/clang docker.gitlab.gwdg.de/lebert/monochrome
