--- a/.gitlab/Dockerfile.gcc
+++ b/.gitlab/Dockerfile.gcc
@@ -1,4 +1,4 @@
-FROM docker.gitlab.gwdg.de/jlebert/quickmultrecviewer:latest
+FROM docker.gitlab.gwdg.de/lebert/monochrome:latest
 
 RUN update-alternatives --set c++ $(which g++)
 RUN update-alternatives --set cc  $(which gcc)
