--- a/.gitlab/Makefile
+++ b/.gitlab/Makefile
@@ -1,12 +1,12 @@
 build:
-	docker build --pull -t docker.gitlab.gwdg.de/lebert/monochrome:latest .
-	docker build -t docker.gitlab.gwdg.de/lebert/monochrome/gcc:latest -f Dockerfile.gcc .
-	docker build -t docker.gitlab.gwdg.de/lebert/monochrome/clang:latest -f Dockerfile.clang .
+	docker build --pull -t registry.gitlab.com/cardiac-vision/monochrome:latest .
+	docker build -t registry.gitlab.com/cardiac-vision/monochrome/gcc:latest -f Dockerfile.gcc .
+	docker build -t registry.gitlab.com/cardiac-vision/monochrome/clang:latest -f Dockerfile.clang .
 
 push:
-	docker push docker.gitlab.gwdg.de/lebert/monochrome
-	docker push docker.gitlab.gwdg.de/lebert/monochrome/gcc
-	docker push docker.gitlab.gwdg.de/lebert/monochrome/clang
+	docker push registry.gitlab.com/cardiac-vision/monochrome
+	docker push registry.gitlab.com/cardiac-vision/monochrome/gcc
+	docker push registry.gitlab.com/cardiac-vision/monochrome/clang
 
 clean:
-	docker rmi docker.gitlab.gwdg.de/lebert/monochrome/gcc docker.gitlab.gwdg.de/lebert/monochrome/clang docker.gitlab.gwdg.de/lebert/monochrome
+	docker rmi registry.gitlab.com/cardiac-vision/monochrome/gcc docker.gitlab.com/cardiac-vision/monochrome/clang docker.gitlab.com/cardiac-vision/monochrome
