--- a/.gitlab/Dockerfile.clang
+++ b/.gitlab/Dockerfile.clang
@@ -1,4 +1,4 @@
-FROM docker.gitlab.gwdg.de/lebert/monochrome:latest
+FROM registry.gitlab.com/cardiac-vision/monochrome:latest
 
 RUN update-alternatives --set c++ $(which clang++)
 RUN update-alternatives --set cc  $(which clang)
